Add awards to the page "About us"

--- a/about_us.html
+++ b/about_us.html
@@ -154,30 +154,125 @@
                         <div class="awards__content">
                             <h2 class="awards__title">Our awards</h2>
                             <div class="awards__wrapper">
-                                <div class="awards__block __first">
-                                    <p class="awards__name"> Competition</p>
-                                    <p class="awards__project">Project Title: </p>
-                                    <p class="awards__nomination">Nomination: </p>
-                                    <p class="awards__nomination">Award: </p>
+                                <p class="awards__title-year">2021</p>
+                                <div class="years-wrapper">
+                                    <div class="awards__block __first">
+                                        <p class="awards__name"> Project of the year Fundermax 6.0 2021 </p>
+                                        <p class="award"> Project Title: Aquapark in Mukachevo, Zakarpattia region, Ukraine </p>
+                                        <p class="award"> Nomination: Project of the year </p>
+                                        <p class="award"> Award: Grand Prix exterrior </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2021" </p>
+                                        <p class="award"> Project Title: Center of Government Services in Nova-Kakhovka, Kherson region, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (realisation) </p>
+                                        <p class="award"> Award: Grand Prix for achievements in architecture</p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2021" </p>
+                                        <p class="award"> Project Title: Water leisure center in Mukachevo, Zakarpattia region, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (realisation) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2021" </p>
+                                        <p class="award"> Project Title: National Health Service of Ukraine, Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (realisation) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2021" </p>
+                                        <p class="award"> Project Title: Reconstruction of non-residental buildings for the administrative and production complex, Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (project) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
                                 </div>
-                                <div class="awards__block">
-                                    <p class="awards__name"> Competition</p>
-                                    <p class="awards__project">Project Title: </p>
-                                    <p class="awards__nomination">Nomination: </p>
-                                    <p class="awards__nomination">Award: </p>
+                                
+                                <p class="awards__title-year">2020</p>
+                                <div class="years-wrapper">                                    
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2020" </p>
+                                        <p class="award"> Project Title: Water leisure center in Mukachevo, Zakarpattia region, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (project) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> DP CERTSYSTEMS Certificate of quality management system 2021-2024 </p>
+                                        <p class="award"> Nomination: ISO 9001: 2015 "Quality management systems. Requirements" </p>
+                                        <p class="award"> DSTU ISO 9001: 2015 (ISO 9001: 2015, IDT) "Quality management systems. Requirements" </p>
+                                        <p class="award"> DSTU EN ISO 9001: 2018 (EN ISO 9001: 2015, IDT; ISO 9001: 2015, IDT) "Quality management systems. Requirements" </p>
+                                    </div>  
                                 </div>
-                                <div class="awards__block">
-                                    <p class="awards__name"> Competition</p>
-                                    <p class="awards__project">Project Title: </p>
-                                    <p class="awards__nomination">Nomination: </p>
-                                    <p class="awards__nomination">Award: </p>
+                                <p class="awards__title-year">2019</p>
+                                <div class="years-wrapper">
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2019" </p>
+                                        <p class="award"> Project Title: Office on Ilyinsky street, Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Interrior </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
                                 </div>
-                                <div class="awards__block">
-                                    <p class="awards__name"> Competition</p>
-                                    <p class="awards__project">Project Title: </p>
-                                    <p class="awards__nomination">Nomination: </p>
-                                    <p class="awards__nomination">Award: </p>
+                                <p class="awards__title-year">2018</p>
+                                <div class="years-wrapper">
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2018" </p>
+                                        <p class="award"> Project Title: Center of Government Services in Nova-Kakhovka, Kherson region, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (project) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2018" </p>
+                                        <p class="award"> Project Title: Kindergarten "Zyrochka" in Brovary, Kyiv region, Ukraine </p>
+                                        <p class="award"> Nomination: Buildings, complexes and structures (project) </p>
+                                        <p class="award"> Award: Laureate's diploma </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2018" </p>
+                                        <p class="award"> Project Title: Dwelling house in Cherkasska str, Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Multi-storey residential buildings </p>
+                                        <p class="award"> Award: Winner </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Ukrainian Urban Awards "Interrior of the year 2018" </p>
+                                        <p class="award"> Project Title: Interrior of the office "Smart Group" in Kyiv, Ukraine</p>
+                                        <p class="award"> Nomination: Interior of public and administrative buildings </p>
+                                        <p class="award"> Award: Second prize </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Competition-review "Reset City-2018" </p>
+                                        <p class="award"> Project Title: Primary school in Brovary, Kyiv region, Ukraine</p>
+                                        <p class="award"> Nomination: Renovation </p>
+                                        <p class="award"> Award: Winner </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> National Forum for Constructin Projects Management "Red PM Day 2018" </p>
+                                        <p class="award"> Nomination: The most effective project team </p>
+                                        <p class="award"> Award: Winner </p>
+                                    </div>                                    
                                 </div>
+                                <p class="awards__title-year">2017</p>
+                                <div class="years-wrapper">
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2017" </p>
+                                        <p class="award"> Project Title: Interrior of Lecture room in Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Public rooms </p>
+                                        <p class="award"> Award: Interr'YEAR 3rd prize </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2017" </p>
+                                        <p class="award"> Project Title: Interrior of "Furshet" store in Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Retail premises </p>
+                                        <p class="award"> Award: Interr'YEAR 2nd prize </p>
+                                    </div>
+                                    <div class="awards__block">
+                                        <p class="awards__name"> Review-competition "Award of the National Union of Architects of Ukraine 2017" </p>
+                                        <p class="award"> Project Title: Lecture room in Kyiv, Ukraine </p>
+                                        <p class="award"> Nomination: Interiors of administrative buildings </p>
+                                        <p class="award"> Award: Prize of architect Vyacheslav Morsky for achievements in architecture in the style of Modernism </p>
+                                    </div>                                    
+                                </div>
+
+                                                              
                             </div>
                         </div>                      
                     </div>
