Fixed hovering in projects

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Aquapark </p></a>
+                                    <a href=""><p class="project__text"> Aquapark in Mukachevo </p></a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
