--- a/projects.html
+++ b/projects.html
@@ -141,7 +141,7 @@
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Aquapark </p></a>
+                                    <a href=""><p class="project__text"> Aquapark in Mukachevo </p></a>
                                 </div>
                             </div>
 
