Add meta tags and change preloader

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- SEO -->
+    <meta name="description" content="Anna Kyrii Architectural Projecting Group">
+    <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
+    <meta name="author" content="Anna Kyrii Architectural Projecting Group">
+
     <link rel="stylesheet" href="assets/style/preloader.css">  <!-- preloader--> 
     <link rel="stylesheet" href="assets/style/normalize.css">  <!-- add reset style --> 
     <link rel="stylesheet" href="assets/style/style.css">   <!-- main page css -->
@@ -126,12 +131,12 @@
                             </div>
                             <div class="project__leleka project__content healthcare">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/02_leleka/leleka.html"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/02_leleka/leleka.html"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Maternity Hospital "Leleka" </p></a>
+                                    <a href="each-projects-page/02_leleka/leleka.html"><p class="project__text"> Maternity Hospital "Leleka" </p></a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content leisure">
