Add meta-tags in all pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <!-- SEO -->
+    <meta name="description" content="Anna Kyrii Architectural Projecting Group">
+    <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
+    <meta name="author" content="Anna Kyrii Architectural Projecting Group">
+
     <link rel="stylesheet" href="assets/style/preloader.css">   <!-- preloader -->
     <link rel="stylesheet" href="assets/style/normalize.css">  <!-- add reset style --> 
     <link rel="stylesheet" href="assets/style/style_about-us.css">   <!-- about us css -->
