--- a/each-projects-page/02_leleka/leleka.html
+++ b/each-projects-page/02_leleka/leleka.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO -->
+    <meta name="description" content="Anna Kyrii Architectural Projecting Group">
+    <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
+    <meta name="author" content="Anna Kyrii Architectural Projecting Group">
+    
     <link rel="stylesheet" href="../../assets/style/normalize.css">  <!-- add reset style --> 
     <link rel="stylesheet" href="../../assets/style/style.css">   <!-- main page css -->
     <link rel="stylesheet" href="../../assets/style/style_projects.css">   <!-- projects css -->
