--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,8 @@
     <script src="assets/js/snippets_html.js"></script>
 </head>
 <body>
-<!-- <body class="no-scroll-y"> -->
-    <!-- <div class="preloader">
+<!-- <body class="no-scroll-y">
+    <div class="preloader">
         <div id="preloader__loader">
             <svg width="274" height="275" viewBox="0 0 274 275" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g>
@@ -32,8 +32,7 @@
                     <path id="right-half" d="M137 2C171.876 2 205.324 15.8544 229.985 40.5155C254.646 65.1765 268.5 98.624 268.5 133.5C268.5 168.376 254.646 201.824 229.985 226.485C205.324 251.146 171.876 265 137 265" stroke="#333"/>
                 </g>
             </svg>   
-        </div>
-        
+        </div>        
     </div> -->
 
     <main class="page__main">
