Add projects and preloader to "Leleka" slider

--- a/each-projects-page/01_nszu/nszu.html
+++ b/each-projects-page/01_nszu/nszu.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="architecture, project, projects, Anna Kyrii, architect, architectural group, architectural design">
     <meta name="author" content="Anna Kyrii Architectural Projecting Group">
 
+    <link rel="stylesheet" href="../../assets/style/preloader.css">  <!-- preloader--> 
     <link rel="stylesheet" href="../../assets/style/normalize.css">  <!-- add reset style --> 
     <link rel="stylesheet" href="../../assets/style/style.css">   <!-- main page css -->
     <link rel="stylesheet" href="../../assets/style/style_projects.css">   <!-- projects css -->
@@ -293,6 +294,7 @@
         </section>
     </main>
 
+    <script src="../../assets/js/preloader.js"></script> <!--Preloader script -->
     <script src="../../assets/js/burger.js" ></script> <!-- Import Burger menu -->  
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> <!-- Import slider swiper -->  
     <script src="../../assets/js/project-slider.js" ></script> <!-- Import Project slider -->  
