Choose photo for aquapark

--- a/projects.html
+++ b/projects.html
@@ -140,12 +140,12 @@
                             </div>
                             <div class="project__aquapark project__content leisure">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/03_aquapark/aquapark.html"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/03_aquapark/aquapark.html"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Aquapark in Mukachevo </p></a>
+                                    <a href="each-projects-page/03_aquapark/aquapark.html"><p class="project__text"> Aquapark in Mukachevo </p></a>
                                 </div>
                             </div>
 
