--- a/each-projects-page/03_aquapark/aquapark.html
+++ b/each-projects-page/03_aquapark/aquapark.html
@@ -53,7 +53,7 @@
                         </div>
                         <nav class="menu__body">
                             <ul class="menu__list" >
-                                <li> <a href="../../projects.html" class="projects-link __hover"> Projects </a> </li>
+                                <li> <a href="../../projects.html" class="__hover"> Projects </a> </li>
                                 <li> <a href="../../about_us.html" class="__hover"> About us </a> </li>
                                 <li> <a href="../../contacts.html" class="__hover"> Contacts </a> </li>
                                 <li> <a href="#" class="__hover"> Ua </a> </li>
