Add photos to Nova Kakhovka slider

--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Center of Government Services </p></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><p class="project__text"> Center of Government Services </p></a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
