Chose School Brovary photos

--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Primary school in Brovary </p></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
