--- a/projects.html
+++ b/projects.html
@@ -153,22 +153,22 @@
 
                             <div class="project__brovary project__content education">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Primary school in Brovary </p></a>
+                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content public">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Center of Government Services in Nova-Kakhovka </p></a>
+                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><p class="project__text"> Center of Government Services in Nova-Kakhovka </p></a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content education">
