Add Zirochka's photo to slider

--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <a href=""><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
-                                    <a href=""><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
+                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
+                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href=""><p class="project__text"> Kindergarten "Zyrochka" </p></a>
+                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><p class="project__text"> Kindergarten "Zyrochka" </p></a>
                                 </div>
                             </div>
                         </div>
