Add changes to Nova Kakhovka slider photos

--- a/each-projects-page/05_nova-kakhovka/nova-kakhovka.html
+++ b/each-projects-page/05_nova-kakhovka/nova-kakhovka.html
@@ -110,28 +110,28 @@
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_03.jpg" alt="">
+                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_03.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_04.jpg" alt="">
+                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_04.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_05.jpg" alt="">
+                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_05.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
                                 <div class="image-slider__slide swiper-slide">
                                     <div class="image-slider__image">
                                         <div>
-                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_06.jpg" alt="">
+                                            <img src="../../assets/pic/05_nova_kakhovka/slider/05_06.png" alt="">
                                         </div>
                                     </div>                          
                                 </div>
