Deleted images folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/style/media.css">   <!-- media queries -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Anna Kyrii</title>
-    <link rel="icon" type="image/png" href="assets/images/projects/00_general/logo_new.png">
+    <link rel="icon" type="image/png" href="assets/pic/00_general/logo_new.png">
     <script src="assets/js/snippets_html.js"></script> <!-- Import parts of page HTML -->
     
     
@@ -310,7 +310,7 @@
                                             <!-- <p class="input-error"> Provide a message</p>  -->
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">Please, complete all fields</p>
+                                        <p class="error-hiden">This field is required</p>
                                         <button type="submit" class="contacts__submit"> Submit </button>
                                         <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
                                     </form>                   
